@@ -110,8 +110,8 @@ public class TestDistributedTracing extends SolrCloudTestCase {
         fail("All spans must belong to single span, but:" + finishedSpans);
       }
     }
-    assertEquals("get:/{collection}/select", finishedSpans.get(0).operationName());
-    assertDbInstanceColl(finishedSpans.get(0));
+    assertEquals("get:/{core}/select", finishedSpans.get(0).operationName());
+    assertDbInstanceCore(finishedSpans.get(0));
   }
 
   @Test
